MOAR bibtex wibbles

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 24 Oct 2013.
+%% Created using Papers on Fri, 25 Oct 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -17,7 +17,7 @@ month = may
 @inproceedings{Chakravarty:2011fr,
 author = {Chakravarty, Manuel M T and Keller, Gabriele and Lee, Sean and McDonell, Trevor L and Grover, Vinod},
 title = {{Accelerating Haskell array codes with multicore GPUs}},
-booktitle = {DAMP '11: Proceedings of the 6th workshop on Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '11: The 6th workshop on Declarative Aspects of Multicore Programming},
 year = {2011},
 publisher = { ACM  Request Permissions},
 month = jan
@@ -75,7 +75,7 @@ address = {New York, NY, USA}
 @inproceedings{Pilkiewicz:2011,
 author = {Pilkiewicz, Alexandre and Pottier, Fran{\c c}ois},
 title = {{The Essence of Monotonic State}},
-booktitle = {TLDI '11: Proceedings of the 6th ACM SIGPLAN Workshop on Types in Language Design and Implementation},
+booktitle = {TLDI '11: The 6th ACM SIGPLAN Workshop on Types in Language Design and Implementation},
 year = {2011},
 month = jan
 }
@@ -142,7 +142,7 @@ title = {{Thrust: A Parallel Template Library}}
 @inproceedings{Atkey:2009dj,
 author = {Atkey, Robert and Lindley, Sam and Yallop, Jeremy},
 title = {{Unembedding domain-specific languages}},
-booktitle = {Haskell '09: Proceedings of the 2nd ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '09: The 2nd ACM SIGPLAN Symposium on Haskell},
 year = {2009},
 pages = {37--48},
 publisher = {ACM},
@@ -159,7 +159,7 @@ year = {2006}
 @inproceedings{Guillemette:2007,
 author = {Guillemette, Louis-Julien and Monnier, Stefan},
 title = {{A type-preserving closure conversion in Haskell}},
-booktitle = {Haskell '07: Proceedings of the 2007 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '07: The 2007 ACM SIGPLAN workshop on Haskell},
 year = {2007},
 pages = {83--92},
 publisher = {ACM},
@@ -192,7 +192,7 @@ month = nov
 @inproceedings{Larsen:2011fa,
 author = {Larsen, Bradford},
 title = {{Simple Optimizations for an Applicative Array Language for Graphics Processors}},
-booktitle = {DAMP '11: Proceedings of the 6th workshop on Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '11: The 6th workshop on Declarative Aspects of Multicore Programming},
 year = {2011},
 month = jan
 }
@@ -209,7 +209,7 @@ month = sep
 @article{Pfenning:1988,
 author = {Pfenning, F. and Elliot, C.},
 title = {{Higher-order abstract syntax}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {1988},
 volume = {23},
 pages = {199--208},
@@ -275,7 +275,7 @@ address = {London, UK, UK}
 @inproceedings{Skillcorn:1994,
 author = {Skillicorn, D. B. and Cai, Wentong},
 title = {{Equational code generation: implementing categorical data types for data parallelism}},
-booktitle = {TENCON '94: Proceedings of the 9th IEEE conference on the Frontiers of Computer Technology},
+booktitle = {TENCON '94: The 9th IEEE conference on the Frontiers of Computer Technology},
 year = {1994},
 pages = {187--191}
 }
@@ -283,7 +283,7 @@ pages = {187--191}
 @inproceedings{Pang:2004bg,
 author = {Pang, Andr{\'e} and Stewart, Don and Seefried, Sean and Chakravarty, Manuel M T},
 title = {{Plugging Haskell In}},
-booktitle = {Haskell '04: Proceedings of the 2004 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '04: The 2004 ACM SIGPLAN workshop on Haskell},
 year = {2004},
 pages = {10--21},
 publisher = {ACM Press}
@@ -384,7 +384,7 @@ month = oct
 @inproceedings{Dubach:2012wc,
 author = {Dubach, Christophe and Cheng, Perry and Rabbah, Rodric and Bacon, David and Fink, Stephen},
 title = {{Compiling a high-level language for GPUs: (via language support for architectures and compilers)}},
-booktitle = {PLDI '12: Proceedings of the 33rd ACM SIGPLAN conference on Programming Language Design and Implementation},
+booktitle = {PLDI '12: The 33rd ACM SIGPLAN conference on Programming Language Design and Implementation},
 year = {2012}
 }
 
@@ -400,7 +400,7 @@ month = sep
 @inproceedings{Morrisett:1998vo,
 author = {Morrisett, Greg and Walker, David and Crary, Karl and Glew, Neal},
 title = {{From System F to Typed Assembly Language}},
-booktitle = {POPL '98: Proceedings of the 25th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+booktitle = {POPL '98: The 25th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
 year = {1998}
 }
 
@@ -418,7 +418,7 @@ month = jan
 @inproceedings{Ramsey:2010wd,
 author = {Ramsey, Norman and Dias, Joao and Jones, Simon L. Peyton},
 title = {{Hoopl: a modular, reusable library for dataflow analysis and transformation}},
-booktitle = {Haskell '10: Proceedings of the 3rd ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '10: The 3rd ACM SIGPLAN Symposium on Haskell},
 year = {2010}
 }
 
@@ -468,7 +468,7 @@ annote = {Survey of parallel programming models, judged based on: * suitability 
 @inproceedings{Lippmeier:2011cd,
 author = {Ben Lippmeier and Keller, Gabriele},
 title = {{Efficient parallel stencil convolution in Haskell}},
-booktitle = {Haskell '11: Proceedings of the 4th ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '11: The 4th ACM SIGPLAN Symposium on Haskell},
 year = {2011},
 publisher = { ACM  Request Permissions},
 month = sep
@@ -489,7 +489,7 @@ annote = {10.1038/324446a0}
 @inproceedings{Rompf:2013er,
 author = {Rompf, Tiark and Sujeeth, Arvind K and Amin, Nada and Brown, Kevin J and Jovanovic, Vojin and Lee, HyoukJoong and Jonnalagedda, Manohar and Olukotun, Kunle and Odersky, Martin},
 title = {{Optimizing data structures in high-level programs: new directions for extensible compilers based on staging}},
-booktitle = {POPL '13: Proceedings of the 40th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+booktitle = {POPL '13: The 40th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
 year = {2013},
 publisher = { ACM  Request Permissions},
 month = jan
@@ -537,7 +537,7 @@ annote = {Dissects the performance inefficiencies present in the standard Haskel
 @inproceedings{Baskaran:2008,
 author = {Baskaran, Muthu Manikandan and Bondhugula, Uday and Krishnamoorthy, Sriram and Ramanujam, J. and Rountev, Atanas and Sadayappan, P.},
 title = {{A compiler framework for optimization of affine loop nests for GPGPUs}},
-booktitle = {ICS '08: The 22nd annual international conference on Supercomputing},
+booktitle = {ICS '08: The 22nd International conference on Supercomputing},
 year = {2008},
 pages = {225--234},
 publisher = {ACM},
@@ -547,7 +547,7 @@ address = {New York, NY, USA}
 @article{Fisher:1994,
 author = {Fisher, Allan L. and Ghuloum, Anwar M.},
 title = {{Parallelizing complex scans and reductions}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {1994},
 volume = {29},
 number = {6},
@@ -557,7 +557,7 @@ pages = {135--146}
 @inproceedings{Chatterjee:1990vj,
 author = {Chatterjee, Siddhartha and Blelloch, Guy E. and Zagha, Marco},
 title = {{Scan primitives for vector computers}},
-booktitle = {Supercomputing '90: Proceedings of the 1990 ACM/IEEE conference on Supercomputing},
+booktitle = {SC '90: The 1990 ACM/IEEE conference on Supercomputing},
 year = {1990},
 pages = {666--675},
 annote = {Describes the use of scan operations to parallelise several irregular problems; sorting, tree traversal/manipulation and a learning algorithm. Interesting background read, could be useful during implementation. In general, presents a model for a data-parallel interpretation of collective array operations. Much of the work is focused on extracting efficient performance for vector machines (Cray Y-MP), so considers effects such as vector length, bank conflicts, etc...}
@@ -566,7 +566,7 @@ annote = {Describes the use of scan operations to parallelise several irregular 
 @inproceedings{Zagha:1991kk,
 author = {Zagha, Marco and Blelloch, Guy E.},
 title = {{Radix sort for vector multiprocessors}},
-booktitle = {Supercomputing '91: Proceedings of the 1991 ACM/IEEE conference on Supercomputing},
+booktitle = {SC '91: The 1991 ACM/IEEE conference on Supercomputing},
 year = {1991},
 pages = {712--721},
 publisher = {ACM},
@@ -576,7 +576,7 @@ address = {New York, NY, USA}
 @inproceedings{Ryoo:2008,
 author = {Ryoo, Shane and Rodrigues, Christopher I. and Baghsorkhi, Sara S. and Stone, Sam S. and Kirk, David B. and Hwu, Wen-mei W.},
 title = {{Optimization principles and application performance evaluation of a multithreaded GPU using CUDA}},
-booktitle = {PPoPP '08: Proceedings of the 13th ACM SIGPLAN Symposium on Principles and practice of parallel programming},
+booktitle = {PPoPP '08: The 13th ACM SIGPLAN Symposium on Principles and practice of parallel programming},
 year = {2008},
 pages = {73--82},
 publisher = {ACM},
@@ -677,7 +677,7 @@ address = {New York, NY, USA}
 @inproceedings{Mainland:2007bl,
 author = {Mainland, Geoffrey},
 title = {{Why it's nice to be quoted}},
-booktitle = {Haskell '07: Proceedings of the 2007 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '07: The 2007 ACM SIGPLAN workshop on Haskell},
 year = {2007},
 pages = {73},
 publisher = {ACM Press},
@@ -687,7 +687,7 @@ address = {New York, New York, USA}
 @inproceedings{Jones:2009,
 author = {Jones Jr, Don and Marlow, Simon and Singh, Satnam},
 title = {{Parallel performance tuning for Haskell}},
-booktitle = {Haskell '09: Proceedings of the 2nd ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '09: The 2nd ACM SIGPLAN Symposium on Haskell},
 year = {2009},
 pages = {81--92},
 publisher = {ACM},
@@ -698,7 +698,7 @@ annote = {Describes ThreadScope and its use to improve the performance of semi-i
 @inproceedings{Lippmeier:2012gx,
 author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Jones, Simon Peyton},
 title = {{Guiding parallel array fusion with indexed types}},
-booktitle = {Haskell '12: Proceedings of the 5th ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '12: The 5th ACM SIGPLAN Symposium on Haskell},
 year = {2012},
 publisher = { ACM  Request Permissions},
 month = sep
@@ -707,7 +707,7 @@ month = sep
 @inproceedings{Sweeney:2006,
 author = {Sweeney, Tim},
 title = {{The next mainstream programming language: a game developer's perspective}},
-booktitle = {POPL '06: Proceedings of the 33rd ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+booktitle = {POPL '06: The 33rd ACM SIGPLAN-SIGACT Symposium on Principles of programming languages},
 year = {2006},
 pages = {269--269},
 publisher = {ACM},
@@ -816,7 +816,7 @@ url = {http://www.gotw.ca/publications/concurrency-ddj.htm}
 @article{Blelloch:1996jx,
 author = {Blelloch, Guy E. and Greiner, John},
 title = {{A provable time and space efficient implementation of NESL}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {1996},
 volume = {31},
 number = {6},
@@ -856,7 +856,7 @@ annote = {Develops methods and tools for automatically generating high performan
 @inproceedings{Wang:2007,
 author = {Wang, Perry H. and Collins, Jamison D. and Chinya, Gautham N. and Jiang, Hong and Tian, Xinmin and Girkar, Milind and Yang, Nick Y. and Lueh, Guei-Yuan and Wang, Hong},
 title = {{EXOCHI: architecture and programming environment for a heterogeneous multi-core multithreaded system}},
-booktitle = {PLDI '07: Proceedings of the 2007 ACM SIGPLAN conference on Programming language design and implementation},
+booktitle = {PLDI '07: The 2007 ACM SIGPLAN conference on Programming language design and implementation},
 year = {2007},
 pages = {156--166},
 publisher = {ACM},
@@ -931,7 +931,7 @@ annote = {Deprecated.}
 @inproceedings{Marlow:2006,
 author = {Marlow, Simon},
 title = {{An extensible dynamically-typed hierarchy of exceptions}},
-booktitle = {Haskell '06: Proceedings of the 2006 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '06: The 2006 ACM SIGPLAN workshop on Haskell},
 year = {2006},
 pages = {96--106},
 publisher = {ACM},
@@ -960,7 +960,7 @@ pages = {178--194}
 @article{Bjesse:1999em,
 author = {Bjesse, Per and Claessen, Koen and Sheeran, Mary and Singh, Satnam},
 title = {{Lava: Hardware design in Haskell}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {1999},
 volume = {34},
 number = {1},
@@ -991,7 +991,7 @@ month = apr
 @article{Subhlok:1997,
 author = {Subhlok, Jaspal and Yang, Bwolen},
 title = {{A new model for integrated nested task and data parallel programming}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {1997},
 volume = {32},
 number = {7},
@@ -1011,7 +1011,7 @@ pages = {400--462}
 @inproceedings{Fatahalian:2006,
 author = {Fatahalian, Kayvon and Horn, Daniel Reiter and Knight, Timothy J. and Leem, Larkhoon and Houston, Mike and Park, Ji Young and Erez, Mattan and Ren, Manman and Aiken, Alex and Dally, William J. and Hanrahan, Pat},
 title = {{Sequoia: programming the memory hierarchy}},
-booktitle = {Supercomputing '06: Proceedings of the 2006 ACM/IEEE conference on Supercomputing},
+booktitle = {SC '06: The 2006 ACM/IEEE conference on Supercomputing},
 year = {2006},
 pages = {83},
 publisher = {ACM},
@@ -1052,7 +1052,7 @@ annote = {A source-to-source transformation that takes a (straightforward) imple
 @inproceedings{McBride:2004jt,
 author = {McBride, Conor and McKinna, James},
 title = {{I am not a number -- I am a free variable}},
-booktitle = {Haskell '04: Proceedings of the 2004 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '04: The 2004 ACM SIGPLAN workshop on Haskell},
 year = {2004},
 pages = {1--9},
 publisher = {ACM},
@@ -1074,7 +1074,7 @@ annote = {Compares three HPC languages under development, Chapel, Fortress, and 
 @inproceedings{Elliott:2004,
 author = {Elliott, Conal},
 title = {{Programming graphics processors functionally}},
-booktitle = {Haskell '04: Proceedings of the 2004 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '04: The 2004 ACM SIGPLAN workshop on Haskell},
 year = {2004},
 publisher = { ACM  Request Permissions},
 month = sep,
@@ -1250,7 +1250,7 @@ year = {1999}
 @inproceedings{Ryoo:2007,
 author = {Ryoo, Shane and Rodrigues, Christopher I. and Stone, Sam S. and Baghsorkhi, Sara S. and Ueng, Sain-Zee and Hwu, Wen-mei W.},
 title = {{Program optimization study on a 128-core GPU}},
-booktitle = {GPGPU '07: Proceedings of the 1st Workshop on General Purpose Processing on Graphics Processing Units},
+booktitle = {GPGPU '07: The 1st Workshop on General Purpose Processing on Graphics Processing Units},
 year = {2007},
 month = oct,
 annote = {Presents an exhaustive search of the optimisation space for several applications, explaining the effects that optimisations can have on the [GeForce 8-series] architecture and how it differs from more traditional architectures. Small changes in resource per thread can have very significant performance ramifications. Hence, maximizing computational efficiency can be challenging, due to discontinuities in the optimisation space.}
@@ -1269,7 +1269,7 @@ annote = {Collection-oriented languages are characterised by the use of operatio
 @article{Callahan:2004,
 author = {Callahan, David and Carr, Steve and Kennedy, Ken},
 title = {{Improving register allocation for subscripted variables}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {2004},
 volume = {39},
 number = {4},
@@ -1320,7 +1320,7 @@ address = {Washington, DC, USA}
 @inproceedings{Chakravarty:2005kg,
 author = {Chakravarty, Manuel M T and Keller, Gabriele and Jones, Simon Peyton and Marlow, Simon},
 title = {{Associated types with class}},
-booktitle = {POPL '05: Proceedings of the 32nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+booktitle = {POPL '05: The 32nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
 year = {2005},
 pages = {1--13},
 publisher = {ACM},
@@ -1330,7 +1330,7 @@ address = {New York, NY, USA}
 @inproceedings{Jones:2007,
 author = {Jones, Simon Peyton and Wadler, Philip},
 title = {{Comprehensive comprehensions: comprehensions with `Order by' and `Group by'}},
-booktitle = {Haskell '07: Proceedings of the 2007 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '07: The 2007 ACM SIGPLAN workshop on Haskell},
 year = {2007},
 pages = {61--72},
 address = {Freiburg, Germany}
@@ -1452,7 +1452,7 @@ annote = {Presentation. Mainstream GPUs emerged 12 years ago and rapid evolved f
 @inproceedings{Svensson:2012ho,
 author = {Svensson, Bo Joel and Sheeran, Mary},
 title = {{Parallel programming in Haskell almost for free: an embedding of intel's array building blocks}},
-booktitle = {FHPC '12: Proceedings of the 1st ACM SIGPLAN workshop on Functional high-performance computing},
+booktitle = {FHPC '12: The 1st ACM SIGPLAN Workshop on Functional High-Performance Computing},
 year = {2012},
 pages = {3--14},
 publisher = {ACM Press},
@@ -1473,14 +1473,6 @@ title = {{Compiler Optimizations for a Time-constrained Environment}},
 school = {Macalester College},
 year = {2008},
 month = apr
-}
-
-@inproceedings{Rose:1987,
-author = {Rose, J. and Steele Jr, Guy L},
-title = {{C*: An extended C language for data parallel programming}},
-booktitle = {Proceedings of the Second International Conference on Supercomputing},
-year = {1987},
-pages = {2--16}
 }
 
 @article{Rafler:2011ui,
@@ -1505,6 +1497,13 @@ pages = {2033--2040},
 month = dec
 }
 
+@techreport{Allen:2005,
+author = {Allen, Eric and Chase, David and Hallett, Joe and Luchangco, Victor and Maessen, Jan-Willem and Ryu, Sukyoung and Steele Jr, Guy L and Tobin-Hochstadt, Sam and Dias, Joao and Eastlund, Carl and Flood, Christine and Lev, Yossi and McCosh, Cheryl},
+title = {{The Fortress language specification, v1.0$\beta$}},
+year = {2005},
+month = mar
+}
+
 @inproceedings{Takano:1995,
 author = {Takano, Akihiko and Meijer, Erik},
 title = {{Shortcut deforestation in calculational form}},
@@ -1515,11 +1514,12 @@ month = oct,
 annote = {Automatic program transformations to remove unnecessary intermediate data structures (deforestation). States that the technique is applicable for any functional program in function composition style, for any algebraic data type. Seems to generalise the foldr/build rule and its dual, and can be extended to work on primitive recursion.}
 }
 
-@techreport{Allen:2005,
-author = {Allen, Eric and Chase, David and Hallett, Joe and Luchangco, Victor and Maessen, Jan-Willem and Ryu, Sukyoung and Steele Jr, Guy L and Tobin-Hochstadt, Sam and Dias, Joao and Eastlund, Carl and Flood, Christine and Lev, Yossi and McCosh, Cheryl},
-title = {{The Fortress language specification, v1.0$\beta$}},
-year = {2005},
-month = mar
+@techreport{Emoto:2012ur,
+author = {Emoto, Kento and Matsuzaki, Kiminori},
+title = {{An Automatic Fusion Mechanism for Variable-Length List Skeletons in SkeTo}},
+year = {2012},
+number = {METR 2013-04},
+month = feb
 }
 
 @article{Owens:2007,
@@ -1531,14 +1531,6 @@ volume = {26},
 number = {1},
 pages = {80--113},
 annote = {Updated version of the original 2005 survey by the same name.}
-}
-
-@techreport{Emoto:2012ur,
-author = {Emoto, Kento and Matsuzaki, Kiminori},
-title = {{An Automatic Fusion Mechanism for Variable-Length List Skeletons in SkeTo}},
-year = {2012},
-number = {METR 2013-04},
-month = feb
 }
 
 @article{Hussong:2009,
@@ -1555,7 +1547,7 @@ month = may
 @inproceedings{Sengupta:2007tc,
 author = {Sengupta, Shubhabrata and Harris, Mark and Zhang, Yao and Owens, John D},
 title = {{Scan primitives for GPU computing}},
-booktitle = {GH '07: Proceedings of the 22nd ACM SIGGRAPH/EUROGRAPHICS symposium on Graphics hardware},
+booktitle = {GH '07: The 22nd ACM SIGGRAPH/EUROGRAPHICS symposium on Graphics Hardware},
 year = {2007},
 pages = {97--106},
 publisher = {Eurographics Association},
@@ -1616,7 +1608,7 @@ month = mar
 @inproceedings{Han:2009,
 author = {Han, Tianyi David and Abdelrahman, Tarek S.},
 title = {{hiCUDA: a high--level directive--based language for GPU programming}},
-booktitle = {GPGPU '09: Proceedings of the 2nd Workshop on General Purpose Processing on Graphics Processing Units},
+booktitle = {GPGPU '09: The 2nd Workshop on General Purpose Processing on Graphics Processing Units},
 year = {2009},
 pages = {52--61},
 publisher = {ACM},
@@ -1645,7 +1637,7 @@ month = nov
 @inproceedings{Lee:2008,
 author = {Lee, Seyong and Min, Seung-Jai and Eigenmann, Rudolf},
 title = {{OpenMP to GPGPU: a compiler framework for automatic translation and optimization}},
-booktitle = {PPoPP '09: Proceedings of the 14th ACM SIGPLAN symposium on Principles and practice of parallel programming},
+booktitle = {PPoPP '09: The 14th ACM SIGPLAN symposium on Principles and practice of parallel programming},
 year = {2008},
 pages = {101--110},
 publisher = {ACM},
@@ -1668,7 +1660,7 @@ annote = {Survey paper that examines parallel programming/processing models (gen
 @inproceedings{Lesniak:2010,
 author = {Lesniak, Michael},
 title = {{PASTHA: Parallelizing stencil calculations in Haskell}},
-booktitle = {DAMP '10: Proceedings of the 5th workshop on Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '10: The 5th workshop on Declarative Aspects of Multicore Programming},
 year = {2010},
 pages = {5--14},
 publisher = {ACM},
@@ -1678,7 +1670,7 @@ address = {New York, NY, USA}
 @inproceedings{Mainland:2010vj,
 author = {Mainland, Geoffrey and Morrisett, Greg},
 title = {{Nikola: Embedding Compiled GPU Functions in Haskell}},
-booktitle = {Haskell '10: Proceedings of the 3rd ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '10: The 3rd ACM SIGPLAN Symposium on Haskell},
 year = {2010},
 publisher = {ACM},
 address = {New York, NY, USA}
@@ -1723,7 +1715,7 @@ year = {2009}
 @article{Schrijvers:2008ir,
 author = {Schrijvers, Tom and Peyton Jones, Simon and Chakravarty, Manuel M T and Sulzmann, Martin},
 title = {{Type checking with open type functions}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {2008},
 volume = {43},
 number = {9},
@@ -1817,7 +1809,7 @@ year = {1993}
 @inproceedings{Chakravarty:2007tc,
 author = {Chakravarty, Manuel M T and Leshchinskiy, Roman and Jones, Simon Peyton and Keller, Gabriele and Marlow, Simon},
 title = {{Data Parallel Haskell: A status report}},
-booktitle = {DAMP '07: Proceedings of the 2nd workshop on Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '07: The 2nd workshop on Declarative Aspects of Multicore Programming},
 year = {2007},
 publisher = {ACM},
 month = nov,
@@ -1848,7 +1840,7 @@ annote = {Discusses a possible implementation of nested data-parallelism in Hask
 @inproceedings{Lippmeier:2013vz,
 author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Robinson, Amos},
 title = {{Data Flow Fusion with Series Expressions in Haskell}},
-booktitle = {Haskell '13: Proceedings of the 6th ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '13: The 6th ACM SIGPLAN Symposium on Haskell},
 year = {2013},
 month = sep
 }
@@ -1863,7 +1855,7 @@ year = {2007}
 @inproceedings{Gill:2009dx,
 author = {Gill, Andy},
 title = {{Type-Safe Observable Sharing in Haskell}},
-booktitle = {Haskell '09: Proceedings of the 2nd ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '09: The 2nd ACM SIGPLAN Symposium on Haskell},
 year = {2009},
 pages = {117--128},
 month = sep
@@ -1950,7 +1942,7 @@ month = dec
 @article{Wall:1991,
 author = {Wall, David W.},
 title = {{Limits of instruction-level parallelism}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {1991},
 volume = {26},
 number = {4},
@@ -1982,7 +1974,7 @@ month = may
 @inproceedings{Stam:1999ey,
 author = {Stam, Jos},
 title = {{Stable fluids}},
-booktitle = {SIGGRAPH '99: Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
+booktitle = {SIGGRAPH '99: The 26th annual conference on Computer graphics and interactive techniques},
 year = {1999},
 publisher = { ACM Press/Addison-Wesley Publishing Co.  Request Permissions},
 month = jul
@@ -1996,7 +1988,7 @@ year = {2013}
 @inproceedings{Sulzmann:2007ch,
 author = {Sulzmann, Martin and Chakravarty, Manuel M T and Jones, Simon Peyton and Donnelly, Kevin},
 title = {{System F with type equality coercions}},
-booktitle = {TLDI '07: Proceedings of the 2nd ACM SIGPLAN Workshop on Types in Language Design and Implementation},
+booktitle = {TLDI '07: The 2nd ACM SIGPLAN Workshop on Types in Language Design and Implementation},
 year = {2007},
 pages = {53--66},
 publisher = {ACM},
@@ -2035,7 +2027,7 @@ year = {1997}
 @article{Claessen:2002,
 author = {Claessen, Koen and Hughes, John},
 title = {{Testing monadic code with QuickCheck}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {2002},
 volume = {37},
 number = {12},
@@ -2065,7 +2057,7 @@ month = oct
 @inproceedings{Dotsenko:2008fo,
 author = {Dotsenko, Yuri and Govindaraju, Naga K and Sloan, Peter-Pike and Boyd, Charles and Manferdelli, John},
 title = {{Fast scan algorithms on graphics processors}},
-booktitle = {ICS '08: The 22nd annual international conference on Supercomputing},
+booktitle = {ICS '08: The 22nd International conference on Supercomputing},
 year = {2008},
 pages = {205--213},
 publisher = {ACM Press},
@@ -2128,16 +2120,6 @@ year = {1994},
 address = {Cambridge, MA, USA}
 }
 
-@book{PeytonJones:2000ks,
-author = {Peyton Jones, Simon and Marlow, Simon and Elliott, Conal},
-editor = {Goos, Gerhard and Hartmanis, Juris and Leeuwen, Jan and Koopman, Pieter and Clack, Chris},
-title = {{Stretching the Storage Manager: Weak Pointers and Stable Names in Haskell}},
-publisher = {Springer Berlin Heidelberg},
-year = {2000},
-volume = {1868},
-address = {Berlin, Heidelberg}
-}
-
 @article{Valiant:1990,
 author = {Valiant, Leslie G.},
 title = {{A bridging model for parallel computation}},
@@ -2149,10 +2131,20 @@ pages = {103--111},
 annote = {Describes bulk-synchronous task parallelism model. This is similar to the SPMD model, and is (similarly) strictly more powerful than the SIMD model.}
 }
 
+@inproceedings{PeytonJones:2000ks,
+author = {Peyton Jones, Simon and Marlow, Simon and Elliott, Conal},
+title = {{Stretching the Storage Manager: Weak Pointers and Stable Names in Haskell}},
+booktitle = {IFL '99: The 11th International Symposium on Implementation and Application of Functional Languages},
+year = {1999},
+pages = {37--58},
+publisher = {Springer Berlin Heidelberg},
+month = sep
+}
+
 @inproceedings{Bell:2009bl,
 author = {Bell, Nathan and Garland, Michael},
 title = {{Implementing sparse matrix-vector multiplication on throughput-oriented processors}},
-booktitle = {Supercomputing '09: Proceedings of the 2009 Conference on High Performance Computing Networking, Storage and Analysis},
+booktitle = {SC '09: The 2009 conference on High Performance Computing Networking, Storage and Analysis},
 year = {2009},
 pages = {1--11},
 publisher = {ACM},
@@ -2182,7 +2174,7 @@ address = {New York, NY, USA}
 @inproceedings{Zhang:2010jc,
 author = {Zhang, Eddy Z and Jiang, Yunlian and Guo, Ziyu and Shen, Xipeng},
 title = {{Streamlining GPU applications on the fly}},
-booktitle = {ICS '10: The 24th ACM International Conference on Supercomputing},
+booktitle = {ICS '10: The 24th International Conference on Supercomputing},
 year = {2010},
 pages = {115--126},
 publisher = {ACM Press},
@@ -2202,7 +2194,7 @@ pages = {107--113}
 @article{Chakravarty:2001dt,
 author = {Chakravarty, Manuel M T and Keller, Gabriele},
 title = {{Functional array fusion}},
-journal = {SIGPLAN Notices},
+journal = {ACM SIGPLAN Notices},
 year = {2001},
 volume = {36},
 number = {10},
@@ -2476,7 +2468,7 @@ month = oct
 @inproceedings{Liu:2013ug,
 author = {Liu, Hai and Glew, Neal and Petersen, Leaf and Anderson, Todd A},
 title = {{The Intel Labs Haskell Research Compiler}},
-booktitle = {Haskell '13: Proceedings of the 6th ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '13: The 6th ACM SIGPLAN Symposium on Haskell},
 year = {2013},
 month = sep
 }
@@ -2516,10 +2508,30 @@ year = {2014},
 month = jan
 }
 
+@article{Sheard:2002wu,
+author = {Sheard, Tim and Peyton Jones, Simon},
+title = {{Template meta-programming for Haskell}},
+journal = {ACM SIGPLAN Notices},
+year = {2002},
+volume = {37},
+number = {12},
+pages = {60--75},
+month = dec
+}
+
+@inproceedings{Madsen:2013ew,
+author = {Madsen, Frederik M and Filinski, Andrzej},
+title = {{Towards a streaming model for nested data parallelism}},
+booktitle = {FHPC '13: The 2nd ACM SIGPLAN Workshop on Functional High-Performance Computing},
+year = {2013},
+pages = {13--24},
+month = sep
+}
+
 @inproceedings{Warren:1984ka,
 author = {Warren, Joe},
 title = {{A hierarchical basis for reordering transformations}},
-booktitle = {POPL '84: Proceedings of the 11th ACM SIGACT-SIGPLAN symposium on Principles of Programming Languages},
+booktitle = {POPL '84: The 11th ACM SIGACT-SIGPLAN symposium on Principles of Programming Languages},
 year = {1984},
 pages = {272--282},
 publisher = {ACM Press},
@@ -2529,7 +2541,7 @@ address = {New York, New York, USA}
 @inproceedings{Claessen:2012hl,
 author = {Claessen, Koen and Sheeran, Mary and Svensson, Bo Joel},
 title = {{Expressive Array Constructs in an Embedded GPU Kernel Programming Language}},
-booktitle = {DAMP '12: Proceedings of the 7th workshop on Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '12: The 7th workshop on Declarative Aspects of Multicore Programming},
 year = {2012},
 pages = {21},
 publisher = {ACM Press},
@@ -2539,7 +2551,7 @@ address = {New York, New York, USA}
 @inproceedings{Catanzaro:2011cn,
 author = {Catanzaro, Bryan and Garland, Michael and Keutzer, Kurt},
 title = {{Copperhead: Compiling an embedded data parallel language}},
-booktitle = {PPoPP '11: Proceedings of the 16th ACM symposium on Principles and practice of parallel programming},
+booktitle = {PPoPP '11: The 16th ACM symposium on Principles and practice of parallel programming},
 year = {2011},
 publisher = { ACM  Request Permissions},
 month = feb
@@ -2586,7 +2598,7 @@ month = oct
 @inproceedings{Yorgey:2012fs,
 author = {Yorgey, Brent A and Weirich, Stephanie and Cretin, Julien and Jones, Simon Peyton and Vytiniotis, Dimitrios and Magalh{\~a}es, Jos{\'e} Pedro},
 title = {{Giving Haskell a promotion}},
-booktitle = {TLDI '12: Proceedings of the 8th ACM SIGPLAN workshop on Types in language design and implementation},
+booktitle = {TLDI '12: The 8th ACM SIGPLAN workshop on Types in language design and implementation},
 year = {2012},
 publisher = { ACM  Request Permissions},
 month = jan
@@ -2696,7 +2708,7 @@ year = {2002}
 @inproceedings{Ohori:2007ug,
 author = {Ohori, Atsushi and Sasano, Isao},
 title = {{Lightweight fusion by fixed point promotion}},
-booktitle = {POPL '07: Proceedings of the 34th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+booktitle = {POPL '07: The 34th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
 year = {2007}
 }
 
@@ -2710,7 +2722,7 @@ year = {2005}
 @inproceedings{Harper:2012vb,
 author = {Harper, Thomas},
 title = {{A library writer's guide to shortcut fusion}},
-booktitle = {Haskell '11: Proceedings of the 4th ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '11: The 4th ACM SIGPLAN Symposium on Haskell},
 year = {2012},
 publisher = { ACM  Request Permissions},
 month = jan
@@ -2736,7 +2748,7 @@ month = jul
 @inproceedings{Alpern:1988hw,
 author = {Alpern, Bowen and Wegman, Mark N. and Zadeck, F. Kenneth},
 title = {{Detecting Equality of Variables in Programs}},
-booktitle = {POPL '88: Proceedings of the 15th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+booktitle = {POPL '88: The 15th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
 year = {1988},
 pages = {1--11},
 publisher = {ACM Press},
